--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 <body>
     <script defer src="js/script.js"></script>
     <link rel="stylesheet" href="styles.css">
-    <h1>Tic-Tac-Toe</h1>
-    <h2>It's X's turn!</h2>
-    <div class="container column">
-        <div class="container wrap" id="board">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
+    <div class="container">
+        <h1>Tic-Tac-Toe</h1>
+        <div class="box-container">
+            <div boxIndex="0" class="box"></div>
+            <div boxIndex="1" class="box"></div>
+            <div boxIndex="2" class="box"></div>
+            <div boxIndex="3" class="box"></div>
+            <div boxIndex="4" class="box"></div>
+            <div boxIndex="5" class="box"></div>
+            <div boxIndex="6" class="box"></div>
+            <div boxIndex="7" class="box"></div>
+            <div boxIndex="8" class="box"></div>
         </div>
+        <h2 id="statusText"></h2>
         <button id="reset-button">reset</button>
     </div>
 </body>
